<resources>
    <string name="app_name">LuaHook</string>
    <string name="push">push</string>
    <string name="search">搜索</string>
    <string name="Xposed_status_no">未激活</string>
    <string name="Global_scripts">全局脚本</string>
    <string name="Global_script_description">适用于所有app的全局脚本</string>
    <string name="add_app">添加App</string>
    <string name="format">格式化</string>
    <string name="log">日志</string>
    <string name="manual">手册</string>
    <string name="about">关于</string>
    <string name="save_ok">保存成功</string>
    <string name="home">主页</string>
    <string name="apps">应用</string>
    <string name="Xposed_status_ok">已激活</string>
    <string name="find_us">在 GitHub 查看源码</string>
    <string name="find_us2">加入我们的 Telegram 频道</string>
    <string name="Tag1">获取包名</string>
    <string name="Tag2">hook介绍</string>
    <string name="Tag3">获取类</string>
    <string name="Tag4">调用函数</string>
    <string name="Tag5">修改/获取类字段</string>
    <string name="Tag6">HTTP请求</string>
    <string name="Tag7">file操作</string>
    <string name="Tag8">json操作</string>
    <string name="Tag9">import操作</string>
    <string name="Select_language">选择语言</string>
    <string name="cancel">取消</string>
    <string name="language">语言</string>
    <string name="follow_system">跟随系统</string>
    <string name="setting">设置</string>
    <string name="senior">高级</string>
    <string name="developers">开发者</string>
    <string name="open_source_protocol">开源协议</string>
    <string name="open_source_protocol2">查看项目使用的开源协议</string>
    <string name="tipping">赞赏</string>
    <string name="tipping2">以使LuaHook为您带来更好的服务</string>
    <string name="check_update_title">检查更新</string>
    <string name="check_update_subtitle">检查应用最新版本</string>
    <string name="update_available">发现新版本，点击更新！</string>
    <string name="no_update_available">当前已是最新版本</string>
    <string name="update_check_failed">检查更新失败，请稍后再试</string>
    <string name="className">类名</string>
    <string name="funcName">方法名</string>
    <string name="param">参数</string>
    <string name="funcSign">方法签名</string>
    <string name="plugins">插件</string>

    <string name="appearance">界面外观</string>
    <string name="update_dialog_message">有新版本可用：%s  请点击更新按钮下载安装。</string>
    <string name="cant_open_links">无法打开链接，请确保已安装浏览器</string>
    <string name="no_power">没有权限</string>
    <string name="checking">检查中...</string>
    <string name="check_update_false">检查更新失败，请稍后重试</string>
    <string name="new_version">有新版本</string>
    <string name="find_new_version">发现新版本</string>
    <string name="goto_github_release">前往 GitHub Release</string>
    <string name="cant_open_link_goto">无法打开链接，请手动前往</string>
    <string name="latest_version">已是最新版本</string>
    <string name="check_failed_no_data">检查失败: 无响应数据</string>
    <string name="check_update_failed_no_data">检查更新失败: 无响应数据</string>
    <string name="check_failed_data_parse_error">检查失败: 数据解析错误</string>
    <string name="check_update_failed_data_format">检查更新失败: 响应数据格式错误</string>
    <string name="check_failed">检查失败:</string>
    <string name="check_update_unknown_error">检查更新时发生未知错误</string>
    <string name="check_update_failed_http">检查更新失败: HTTP错误</string>
    <string name="current_version">当前版本:</string>
    <string name="n_latest_version">\\n最新版本</string>
    <string name="if_goto_github">\\n\\n是否前往 GitHub Release 页面查看并更新？</string>
    <string name="hook_method">Hook方法</string>
    <string name="hook_constructor">Hook构造</string>
    <string name="grammer_converse">语法转换</string>
    <string name="author_info">作者信息</string>
    <string name="input_id">请输入昵称</string>
    <string name="share_doc">分享文件</string>
    <string name="source_file_not_exist">源文件不存在或无读取权限:</string>
    <string name="file_operation_failed">文件操作失败：</string>
    <string name="no_apps_share">没有应用可以分享此文件！</string>
    <string name="errors_sharing">分享文件时发生错误:</string>
    <string name="Tag10">new构造方法</string>
    <string name="Tag11">加载网络/本地图片</string>
    <string name="Tag12">获取R类资源</string>
    <string name="Tag13">hook构造方法</string>
    <string name="Tag14">创建代理createProxy</string>
    <string name="script_manage">多脚本管理</string>
    <string name="script_name">脚本名称</string>
    <string name="description">描述(可选)</string>
    <string name="new_script">新建脚本</string>
    <string name="input_sth">请输入内容</string>
    <string name="existed">已存在</string>
    <string name="sure">确定</string>
    <string name="tips">提示</string>
    <string name="Inactive_modules">未激活模块</string>
    <string name="unknown_file">未知文件</string>
    <string name="read_file_failed">读取文件失败:</string>
    <string name="script_format_error">脚本格式错误！</string>
    <string name="error_happen">发生错误</string>
    <string name="luahook_error_restart">LuaHook 发生错误，需要重启。</string>
    <string name="error_message">以下是有关此错误的信息，您可以将其发送给开发者，帮助我们更快地解决问题。理论不包含隐私信息。</string>
    <string name="restart_luahook">重启 LuaHook</string>
    <string name="send_error_massage">发送错误信息</string>
    <string name="close">关闭</string>
    <string name="KuLiPai">苦小怕</string>
    <string name="trans_design">翻译、部分界面设计</string>
    <string name="paditianxiu">帕帝天秀</string>
    <string name="name">名称</string>
    <string name="describe">描述</string>
    <string name="how_activate">如何激活模块</string>
    <string name="no_description">暂无描述</string>
    <string name="scan_support">扫码以支持苦小怕吧！</string>
    <string name="script_mng">脚本管理</string>
    <string name="author">作者</string>
    <string name="how_to_activate">1.通过Shizuku激活\n2.通过Root激活\n详细教程请移步官网:\nhttps://luahook.kulipai.top/activate.html
    </string>
    <string name="xposeddescription">一个Lua实现Hook的模块</string>
    <string name="share">分享</string>
    <string name="confirm_deletion">确认删除吗?</string>
    <string name="import_smali">导入Smali</string>
    <string name="param_err">参数错误</string>
    <string name="confirm_converse">请确认是否需要将 Lua 语法转换为 Luaj++ 语法。如果当前内容已经是 Luaj++ 语法，请勿重复转换。</string>
    <string name="translate">翻译</string>
    <string name="contribution_luahook">如果你喜欢这个项目并想支持它，我们更希望能收到你的实际贡献！一次PR、一个有价值的 Discussion，甚至是 一行代码的建议，都比金钱更让我们感到有意义。当然，如果你真心想通过捐款来表达对作者的认可，我们也同样心怀感激。</string>
    <string name="repository">仓库</string>
    <string name="github_repo">Github开源仓库地址</string>
</resources>