<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

<!--    <TextView-->
<!--        style="@style/TextAppearance.Material3.TitleLarge"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:text="Hook函数" />-->

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/className">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/className"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/funcName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/funcName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:hint="@string/param">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/param"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:gravity="end"-->
<!--        android:orientation="horizontal">-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/cancel"-->
<!--            style="@style/Widget.Material3.Button.TextButton"-->
<!--            android:layout_width="wrap_content"-->

<!--            android:layout_height="wrap_content"-->
<!--            android:text="取消" />-->

<!--        <com.google.android.material.button.MaterialButton-->
<!--            android:id="@+id/ok"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="确定" />-->
<!--    </LinearLayout>-->
</LinearLayout>