<?xml version="1.0" encoding="utf-8"?>


<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true"

        >


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_margin="16dp"
            app:cardBackgroundColor="?attr/colorError"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:strokeColor="#000000"
            app:strokeWidth="0dp">

            <!--    android:layout_margin="0dp"-->

            <!--    app:cardElevation="0dp"-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">





                <ImageView
                    android:id="@+id/img"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:src="@drawable/info_24px"
                    app:tint="?attr/colorOnError" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Xposed_status_no"
                        android:id="@+id/status"
                        android:textColor="?attr/colorOnError"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/version"
                        android:textColor="?attr/colorOnError"
                        android:textSize="15sp" />

                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:visibility="gone"
            android:id="@+id/how_to_activate"
            android:layout_width="match_parent"
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"

            app:cardCornerRadius="16dp"

   >
            <LinearLayout
                android:padding="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:textStyle="bold"
                android:text="@string/how_activate"
                />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.Material3.BodyMedium"

                android:text="@string/how_to_activate"
                android:textIsSelectable="true"
                />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card1"
            style="@style/Widget.Material3.CardView.Outlined"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:src="@drawable/edit_24px"
                    app:tint="?attr/colorOnBackground" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="24dp"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.Material3.TitleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Global_scripts"
                        android:textColor="?attr/colorOnBackground"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Global_script_description"
                        android:textColor="?attr/colorOnBackground"
                        android:textSize="15sp" />

                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="128dp"
            />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>


